User correct clipping coordinates.

--- a/src/trunk/yulup/prototypes/prototype1/src/chrome/skin/editor.css
+++ b/src/trunk/yulup/prototypes/prototype1/src/chrome/skin/editor.css
@@ -47,7 +47,7 @@ editcontroller {
 
 #uiFileOperationNew {
   list-style-image: url("chrome://yulup/skin/icons/yulup-new.png");
-  -moz-image-region: rect(0px 23px 23px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
@@ -56,17 +56,17 @@ editcontroller {
 }
 
 #uiFileOperationNew[disabled="false"]:active {
-  -moz-image-region: rect(24px 23px 47px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiFileOperationNew[disabled="true"] {
-  -moz-image-region: rect(48px 23px 71px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 
 #uiFileOperationOpen {
   list-style-image: url("chrome://yulup/skin/icons/yulup-open.png");
-  -moz-image-region: rect(0px 23px 23px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
@@ -75,17 +75,17 @@ editcontroller {
 }
 
 #uiFileOperationOpen[disabled="false"]:active {
-  -moz-image-region: rect(24px 23px 47px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiFileOperationOpen[disabled="true"] {
-  -moz-image-region: rect(48px 23px 71px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 
 #uiFileOperationSave {
   list-style-image: url("chrome://yulup/skin/icons/yulup-save.png");
-  -moz-image-region: rect(0px 23px 23px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
@@ -94,17 +94,17 @@ editcontroller {
 }
 
 #uiFileOperationSave[disabled="false"]:active {
-  -moz-image-region: rect(24px 23px 47px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiFileOperationSave[disabled="true"] {
-  -moz-image-region: rect(48px 23px 71px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 
 #uiFileOperationSaveAs {
   list-style-image: url("chrome://yulup/skin/icons/yulup-saveas.png");
-  -moz-image-region: rect(0px 23px 23px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
@@ -113,54 +113,54 @@ editcontroller {
 }
 
 #uiFileOperationSaveAs[disabled="false"]:active {
-  -moz-image-region: rect(24px 23px 47px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiFileOperationSaveAs[disabled="true"] {
-  -moz-image-region: rect(48px 23px 71px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 #uiFileOperationUpload {
   list-style-image: url("chrome://yulup/skin/icons/yulup-upload.png");
-  -moz-image-region: rect(0px 23px 23px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
 #uiFileOperationUpload[disabled="false"]:active {
-  -moz-image-region: rect(24px 23px 47px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiFileOperationUpload[disabled="true"] {
-  -moz-image-region: rect(48px 23px 71px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 #uiEditOperationUndo {
   list-style-image: url("chrome://yulup/skin/icons/yulup-undo.png");
-  -moz-image-region: rect(0px 25px 24px 0px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
 #uiEditOperationUndo[disabled="false"]:active {
-  -moz-image-region: rect(24px 25px 48px 0px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiEditOperationUndo[disabled="true"] {
-  -moz-image-region: rect(48px 25px 72px 0px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 
 #uiEditOperationRedo {
   list-style-image: url("chrome://yulup/skin/icons/yulup-redo.png");
-  -moz-image-region: rect(0px 52px 24px 25px);
+  -moz-image-region: rect(0px 25px 23px 0px);
   -moz-box-orient: vertical;
 }
 
 #uiEditOperationRedo[disabled="false"]:active {
-  -moz-image-region: rect(24px 52px 48px 25px);
+  -moz-image-region: rect(24px 25px 47px 0px);
 }
 
 #uiEditOperationRedo[disabled="true"] {
-  -moz-image-region: rect(48px 52px 72px 25px);
+  -moz-image-region: rect(48px 25px 71px 0px);
 }
 
 
